# neon-engine

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  setup-container.sh  setup.sh  vcpkg.json
app/LearnOpenGL/: CMakeLists.txt  main.cpp
app/LearnOpenGL/assets/shaders/: mix-textured-shader.frag  mix-textured-shader.vert  textured-shader.frag
app/LearnOpenGL/graphics/: CMakeLists.txt  camera.cpp  camera.hpp  cube.cpp  cube.hpp  geometry.hpp  graphics.hpp  plane.cpp  plane.hpp  shader.cpp  shader.h  shader.hpp  stb_image.h  texture.cpp  texture.hpp  triangle.cpp  triangle.hpp
app/LearnOpenGL/graphics/geometry/: shape.hpp  triangle.cpp  triangle.hpp
app/LearnOpenGL/graphics/shaders/: base-shader.vert  shader.cpp
app/NeonFPS/: CMakeLists.txt  main.cpp  neon-fps-application.cpp  neon-fps-application.hpp
app/NeonFPS/assets/models/: .gitignore  bunny.obj.dvc  sandal.obj.dvc  sphere.obj.dvc
app/NeonFPS/assets/shaders/: basic-lit.frag  basic-lit.vert  color.frag  mix-textured-shader.frag  textured-shader.frag  unlit.frag  unlit.vert
lib/core/: CMakeLists.txt  application.cpp  application.hpp  input-manager.cpp  input-manager.hpp  renderer.cpp  renderer.hpp  window-manager.cpp  window-manager.hpp
lib/core/base/: render-system.hpp  window-system.hpp
lib/core/core/: application.cpp  application.hpp  glfw-input-system.cpp  glfw-input-system.hpp  glfw-window-manager.cpp  glfw-window-system.cpp  glfw-window-system.hpp  input-manager.hpp  input-system.cpp  input-system.hpp  opengl-render-system.cpp  opengl-render-system.hpp  render-system.cpp  render-system.hpp  renderer.hpp  settings-config.hpp  util.hpp  window-info.hpp  window-manager.hpp  window-system.cpp  window-system.hpp
lib/core/core/application/: application.cpp  application.hpp
lib/core/core/camera/: camera.cpp  camera.hpp
lib/core/core/entity/: spectator.cpp  spectator.hpp
lib/core/core/input/: glfw-input-system.cpp  glfw-input-system.hpp  input-context.hpp  input-state.hpp  input-system.hpp  sdl-2-input-system.cpp  sdl-2-input-system.hpp
lib/core/core/input/private/: input-state-constants.hpp
lib/core/core/oop-system/actor/: actor.hpp
lib/core/core/oop-system/camera/: camera.cpp  camera.hpp
lib/core/core/oop-system/controllers/: controller.hpp  fps-player-controller.cpp  fps-player-controller.hpp  player-controller.cpp  player-controller.hpp
lib/core/core/oop-system/scene-graph/: camera-node.cpp  camera-node.hpp  node.cpp  node.hpp  render-node.cpp  render-node.hpp  scene-graph.cpp  scene-graph.hpp
lib/core/core/private/: neon-pch.hpp  neon.hpp
lib/core/core/render/: data-types.hpp  open-gl-material.cpp  open-gl-material.hpp  open-gl-mesh.cpp  open-gl-mesh.hpp  open-gl-shader.cpp  open-gl-shader.hpp  open-gl-texture.cpp  open-gl-texture.hpp  opengl-render-system.cpp  opengl-render-system.hpp  render-context.hpp  render-system.hpp  util.hpp
lib/core/core/render/primitives/: cube.cpp  cube.hpp
lib/core/core/scene/: scene.cpp  scene.hpp
lib/core/core/util/: data-buffer.hpp  util.hpp
lib/core/core/window/: glfw-window-system.cpp  glfw-window-system.hpp  sdl-2-window-context.hpp  sdl2-window-system.cpp  sdl2-window-system.hpp  window-context.hpp  window-system.hpp
lib/core/impl/: gl-renderer.cpp  gl-renderer.hpp  glfw-window-manager.cpp  glfw-window-manager.hpp
lib/core/private/: gl-renderer.hpp  glfw-input-manager.cpp  glfw-input-manager.hpp  glfw-input-system.cpp  glfw-input-system.hpp  glfw-window-manager.cpp  glfw-window-manager.hpp  glfw-window-system.cpp  glfw-window-system.hpp  opengl-render-system.cpp  opengl-render-system.hpp  opengl-renderer.cpp  opengl-renderer.hpp
lib/neon-core/: CMakeLists.txt
lib/neon-core/neon/application/: application.cpp  application.hpp  settings-config.hpp
lib/neon-core/neon/common/: data-buffer.hpp
lib/neon-core/neon/core/application/: application.cpp  application.hpp  settings-config.hpp
lib/neon-core/neon/core/common/: color.hpp  data-buffer.hpp  rotation.hpp  transform.hpp  util.hpp
lib/neon-core/neon/core/input/: input-context.hpp  input-state.hpp  input-system.hpp  sdl-2-input-system.cpp  sdl-2-input-system.hpp
lib/neon-core/neon/core/logging/: logger.hpp  logging-context.hpp  logging-system.cpp  logging-system.hpp  spd-logger.cpp  spd-logger.hpp
lib/neon-core/neon/core/render/: camera-info.hpp  data-types.hpp  forward-render-pipeline.cpp  forward-render-pipeline.hpp  light-source.hpp  material-info.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  open-gl-material.cpp  open-gl-material.hpp  open-gl-mesh.cpp  open-gl-mesh.hpp  open-gl-shader.hpp  open-gl-texture.cpp  opengl-material.cpp  opengl-material.hpp  opengl-mesh-deprecated.cpp  opengl-mesh-deprecated.hpp  opengl-mesh.cpp  opengl-mesh.hpp  opengl-model.cpp  opengl-model.hpp  opengl-render-system.cpp  opengl-render-system.hpp  (+14 more)
lib/neon-core/neon/input/: sdl-2-input-system.cpp  sdl-2-input-system.hpp
lib/neon-core/neon/logging/: logger.hpp  logging-context.hpp  logging-system.hpp  spd-logger.cpp
lib/neon-core/neon/render/: mesh.hpp  model.cpp  model.hpp  render-context.hpp  render-info.hpp  render-pipeline.hpp  render-system.hpp
lib/neon-core/neon/window/: sdl2-window-system.hpp  window-system.hpp
lib/neon-core/neon/world-system/: world-system.hpp
lib/neon-gl/: CMakeLists.txt
lib/neon-gl/neon/render/: gl-material.hpp  gl-model.hpp  gl-render-system.cpp  gl-render-system.hpp  gl-shader.hpp  gl-texture.cpp  opengl-material.cpp  opengl-material.hpp  opengl-mesh.cpp  opengl-mesh.hpp  opengl-model.cpp  opengl-model.hpp  opengl-render-system.cpp  opengl-render-system.hpp  opengl-shader.hpp  opengl-texture.cpp  opengl-texture.hpp
lib/neon-vulkan/: CMakeLists.txt
lib/neon-vulkan/neon/render/: vk-model.cpp  vk-render-system.hpp  vk-shader.hpp  vk-texture.cpp  vulkan-render-system.cpp  vulkan-render-system.hpp
src/app/HelloTriangle/: CMakeLists.txt  main.cpp
src/app/NeonRuntime/: CMakeLists.txt  main.cpp  neon-runtime-app.cpp
src/app/NeonRuntime/assets/: CREDITS.md
src/lib/neon-gl/: CMakeLists.txt
src/lib/neon-sdl2/: CMakeLists.txt
(+130 files in other folders)
